--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -9,6 +9,6 @@
 
   "ConnectionStrings": {
 
-    "DataBase": "Data Source=SRINIVAS_ROY\\SQLEXPRESS;Initial Catalog=TRIMMS;Integrated Security=True;"
+    "DataBase": "Data Source=DESKTOP-GQHCKII\\SQLEXPRESS;Initial Catalog=TRIMMS;Integrated Security=True;"
   }
 }
