--- a/WebApplication1/efpt.config.json
+++ b/WebApplication1/efpt.config.json
@@ -1,39 +1,39 @@
 ﻿{
-   "CodeGenerationMode": 2,
-   "ContextClassName": "WebApplication1Context",
-   "ContextNamespace": "Data",
-   "DefaultDacpacSchema": null,
-   "FilterSchemas": false,
-   "IncludeConnectionString": false,
-   "ModelNamespace": "Models",
-   "OutputContextPath": "Data",
-   "OutputPath": "Models",
-   "ProjectRootNamespace": "WebApplication1",
-   "Schemas": null,
-   "SelectedHandlebarsLanguage": 0,
-   "SelectedToBeGenerated": 0,
-   "Tables": [
-      {
-         "Name": "[dbo].[POST]",
-         "ObjectType": 1
-      }
-   ],
-   "UiHint": "srinivas_roy\\sqlexpress.TRIMMS.dbo",
-   "UseBoolPropertiesWithoutDefaultSql": false,
-   "UseDatabaseNames": false,
-   "UseDbContextSplitting": false,
-   "UseFluentApiOnly": true,
-   "UseHandleBars": false,
-   "UseHierarchyId": false,
-   "UseInflector": true,
-   "UseLegacyPluralizer": false,
-   "UseManyToManyEntity": false,
-   "UseNoConstructor": false,
-   "UseNoDefaultConstructor": false,
-   "UseNoNavigations": false,
-   "UseNoObjectFilter": false,
-   "UseNodaTime": false,
-   "UseNullableReferences": false,
-   "UseSchemaFolders": false,
-   "UseSpatial": false
+  "CodeGenerationMode": 2,
+  "ContextClassName": "WebApplication1Context",
+  "ContextNamespace": "Data",
+  "DefaultDacpacSchema": null,
+  "FilterSchemas": false,
+  "IncludeConnectionString": false,
+  "ModelNamespace": "Models",
+  "OutputContextPath": "Data",
+  "OutputPath": "Models",
+  "ProjectRootNamespace": "WebApplication1",
+  "Schemas": null,
+  "SelectedHandlebarsLanguage": 0,
+  "SelectedToBeGenerated": 0,
+  "Tables": [
+    {
+      "Name": "[dbo].[POST]",
+      "ObjectType": 1
+    }
+  ],
+  "UiHint": "DESKTOP-GQHCKII\\SQLEXPRESS.TRIMMS.dbo",
+  "UseBoolPropertiesWithoutDefaultSql": false,
+  "UseDatabaseNames": false,
+  "UseDbContextSplitting": false,
+  "UseFluentApiOnly": true,
+  "UseHandleBars": false,
+  "UseHierarchyId": false,
+  "UseInflector": true,
+  "UseLegacyPluralizer": false,
+  "UseManyToManyEntity": false,
+  "UseNoConstructor": false,
+  "UseNoDefaultConstructor": false,
+  "UseNoNavigations": false,
+  "UseNoObjectFilter": false,
+  "UseNodaTime": false,
+  "UseNullableReferences": false,
+  "UseSchemaFolders": false,
+  "UseSpatial": false
 }
